1992-11-20  dickey@software.org

	* src/Makefile: added dependency of dedsort.o on cm_qsort.h

	* src/dedsort.c: use "cm_qsort.h" definitions

	* src/ded.h, src/ded.c: added 3rd arg to _FNX macros

1992-11-20  ste_cm@software.org

	* src/ded.c:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-10-16  dickey@software.org

	* src/dedline.c:
	moved an assignment in 'editprot()' which caused the current
	entry to be incorrectly handled if it was a link.

1992-10-16  ste_cm@software.org

	* src/dedline.c:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-10-16  dickey@software.org

	* src/Makefile: clutter, lint-def

1992-10-09  dickey@software.org

	* test/Makefile, src/Makefile, Makefile: split off CM_LIBRARY

	* src/README:
	fixed a place in @-toggle where curses would optimize w/o knowledge of blip

1992-10-09  ste_cm@software.org

	* src/README:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-10-09  dickey@software.org

	* src/ded.c:
	patched a place where the curses optimizer did not work for
	me

1992-10-08  dickey@software.org

	* src/dedtype.c:
	make search/scrolling interruptable (did not reset a flag
	correctly before), and make the skipping-message show during
	searches.

1992-09-23  dickey@software.org

	* src/ded.c: moved 'dedwait()' call for PAGER inside 'forkfile()'

1992-09-09  dickey@software.org

	* test/test4.cmd:
	patched this: forgot to unset sort-by-inode in subsequent views;
	it made it non-portable on SunOs, since the sequence of inodes was
	not monotonic.

1992-09-09  ste_cm@software.org

	* test/test4.cmd:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-09-04  dickey@software.org

	* test/test4.cmd, test/test3.cmd: erase/to_left

1992-09-04  ste_cm@software.org

	* test/test3.cmd:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-09-04  dickey@software.org

	* src/dlog.c: in 'dlog_comment()', ensure that we format "%s" with only