@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19921120
+MANIFEST for ded, version t19921123
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
