@@ -1,3 +1,12 @@
+1992-11-23  dickey@software.org
+
+	* src/ded2s.c: hack for RCS 5 vs RCS 4 (localtime vs gmt_time
+
+1992-11-23  ste_cm@software.org
+
+	* src/ded2s.c:
+	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11
+
 1992-11-20  dickey@software.org
 
 	* src/Makefile: added dependency of dedsort.o on cm_qsort.h
